# weather-helper

./: .gitignore  Cargo.toml  README.md  flake.nix  replaceWeather
examples/: sample_note.md
src/: lib.rs  main.rs
tests/: data_processing.rs  meta_and_block.rs
